<resources>
    <string name="app_name">NuWeather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="please_type_your_city">Please type your city</string>
    <string name="description">Description:</string>
    <string name="temp">Temp:</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure_value">%s hPa</string>
    <string name="wind_value">%s m/s</string>
    <string name="humidity_value">%s %%</string>
    <string name="no_error_identified">No error identified</string>
    <string name="no_internet_connection">Please check your internet connection and try again!</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="deg">°</string>
    <string name="deg_c">°C</string>
    <string name="deg_f">°F</string>
    <string name="value_deg_c">%s °C</string>
    <string name="value_deg_f">%s °F</string>
    <string name="daily_forecast_16_days">Daily forecast for 16 days</string>
</resources>
