<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainFragment">

    <data>

        <variable
            name="viewModel"
            type="com.nuweather.ui.MainViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_8">


        <EditText
            android:id="@+id/queryEdit"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:hint="@string/please_type_your_city"
            android:inputType="text"
            android:text="@={viewModel.query}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@color/colorPrimary"
            android:onClick="@{() -> viewModel.searchClick()}"
            android:text="@string/search"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/queryEdit" />


        <TextView
            android:id="@+id/labelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/description"
            app:layout_constraintEnd_toStartOf="@+id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchButton" />

        <TextView
            android:id="@+id/labelTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/temp"
            app:layout_constraintEnd_toEndOf="@+id/labelDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelDescription" />


        <TextView
            android:id="@+id/labelPressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/pressure"
            app:layout_constraintEnd_toEndOf="@+id/labelDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelTemp" />


        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.currentWeatherItem.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/labelDescription"
            app:layout_constraintTop_toTopOf="@+id/labelDescription" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@{String.valueOf(viewModel.currentWeatherItem.temp)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@{String.valueOf(viewModel.currentWeatherItem.pressure)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/temp"
            app:layout_constraintTop_toBottomOf="@+id/temp" />

    </android.support.constraint.ConstraintLayout>

</layout>
