<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.MainActivity">

    <data>

        <variable
            name="viewModel"
            type="com.nuweather.feature.currentweather.CurrentWeatherViewModel" />

        <import type="android.view.View" />
    </data>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        bind:setOnRefreshListener="@{viewModel.refresh()}">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/weatherBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_morning"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                bind:imageResource="@{viewModel.weatherBackground}" />

            <TextView
                android:id="@+id/addressText"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_28"
                android:layout_marginEnd="@dimen/dp_8"
                android:fontFamily="sans-serif-light"
                android:text="@{viewModel.currentWeather.city}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_24"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="London, GB" />

            <TextView
                android:id="@+id/descText"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="sans-serif-light"
                android:text="@{viewModel.currentWeather.description}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherImage"
                tools:text="scattered clouds" />

            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:drawableStart="@drawable/ic_humidity"
                android:drawablePadding="@dimen/dp_8"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/humidity"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="@+id/windLabel"
                app:layout_constraintTop_toBottomOf="@+id/windText" />

            <TextView
                android:id="@+id/pressureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:drawableStart="@drawable/ic_pressure"
                android:drawablePadding="@dimen/dp_8"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/pressure"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="@+id/humidityLabel"
                app:layout_constraintTop_toBottomOf="@+id/humidityText" />

            <TextView
                android:id="@+id/windText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:fontFamily="sans-serif-light"
                android:text="@{@string/wind_value(String.valueOf(viewModel.currentWeather.wind.speed))}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/windLabel"
                app:layout_constraintTop_toBottomOf="@+id/windLabel"
                tools:text="4.1 m/s" />

            <TextView
                android:id="@+id/humidityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@{@string/humidity_value(String.valueOf(viewModel.currentWeather.humidity))}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/windText"
                app:layout_constraintTop_toBottomOf="@+id/humidityLabel"
                tools:text="54 %" />

            <TextView
                android:id="@+id/pressureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@{@string/pressure_value(String.valueOf(viewModel.currentWeather.pressure))}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/humidityText"
                app:layout_constraintTop_toBottomOf="@+id/pressureLabel"
                tools:text="1025 hPa" />

            <TextView
                android:id="@+id/windLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_64"
                android:drawableStart="@drawable/ic_wind"
                android:drawablePadding="@dimen/dp_8"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/wind"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weatherImage" />

            <TextView
                android:id="@+id/tempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_8"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@{String.valueOf(viewModel.currentWeather.temp)}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_96"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descText"
                tools:text="28" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/weatherImage"
                android:layout_width="@dimen/dp_128"
                android:layout_height="@dimen/dp_128"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressText"
                bind:imageResource="@{viewModel.weatherImage}"
                tools:srcCompat="@drawable/ic_cloud_lightning_sun" />

            <TextView
                android:id="@+id/degText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/deg"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_64"
                app:layout_constraintStart_toEndOf="@+id/tempText"
                app:layout_constraintTop_toTopOf="@+id/tempText" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/addressText"
                app:layout_constraintStart_toStartOf="@+id/windLabel"
                app:layout_constraintTop_toTopOf="@+id/addressText">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/degSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp_8"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/deg_c"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_24" />
            </LinearLayout>

            <TextView
                android:id="@+id/goToDailyWeather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_24"
                android:background="@drawable/bg_rounded_corner_black_20"
                android:drawableEnd="@drawable/ic_right_arrow"
                android:fontFamily="sans-serif-light"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_8"
                android:text="@string/daily_forecast_16_days"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/tempChart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/goToDailyWeather"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tempText" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</layout>
